--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@types/react-dom": "^18.0.6",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^0.27.2",
+    "dayjs": "^1.11.4",
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.3.3",
     "react-scripts": "5.0.1",
     "typescript": "^4.7.4",
+    "use-debounce": "^8.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -50,6 +52,7 @@
   },
   "devDependencies": {
     "@tanstack/react-query-devtools": "^4.0.10",
+    "@types/spotify-api": "0.0.16",
     "@typescript-eslint/eslint-plugin": "^5.30.7",
     "@typescript-eslint/parser": "^5.30.7",
     "eslint-config-airbnb-typescript": "^17.0.0",
